# projectfiles/apiapplication/routes.py
@@ -1,9 +1,10 @@
 import re
-from apiapplication import api,db
+from urllib import request
+from . import api,db
 from flask_restful import Resource
-from flask import jsonify
-from apiapplication.serializer import response_serializer
-from apiapplication.models import Product, Cart,CartProduct, Category,User,Role
+from flask import jsonify, request
+from .serializer import response_serializer, cart_serializer
+from .models import Product, Cart,CartProduct, Category,User,Role
 
 
 class PublicSearchItem(Resource):
@@ -19,10 +20,20 @@ api.add_resource(PublicSearchItem, '/api/public/product/search/<string:keyword>'
 
 
 class CartItem(Resource):
-    def get():
+    def get(self):
         query = db.session.query(Cart).all()
         print(query)
-        resultset = cartresponseserializer(query)
+        resultset = cart_serializer(query)
         return jsonify(resultset)
+
+api.add_resource(CartItem, '/api/public/cart')        
+
+
+class PublicLogin(Resource):
+    def post(self,username,password):
+        username = request.json.get("username")
+        password = request.json.get("password")
+
+api.add_resource(PublicLogin,'/api/public/login')
 # class PublicLogin(Resource):
 #     def post(self, )
